monitoring/manifests/monitoring-virtualservice.yaml
# Copyright 2021 The Selkies Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: monitoring
spec:
  hosts:
    - monitoring.endpoints.${PROJECT_ID}.cloud.goog
  gateways:
    - monitoring/monitoring-gateway
  http:
    - match:
        - authority:
            exact: monitoring.endpoints.${PROJECT_ID}.cloud.goog
          uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: kube-prom-stack-grafana
            port:
              number: 80
